<resources>
    <string name="app_name">테마랩</string>
    <string name="app_no_data">준비중입니다.</string>

    <string name="app_homepage">https://www.facebook.com/bqlab</string>
    <string name="app_fb_homepage">fb://facewebmodal/f?href=https://www.facebook.com/bqlab</string>

    <string name="main_bar_my">찜</string>
    <string name="main_bar_themes">테마</string>
    <string name="main_bar_news">소식</string>
    <string name="main_bar_setting">설정</string>

    <string name="shop_search_bar">전체에서 테마 검색</string>
    <string name="shop_search_text">에서 테마 검색</string>
    <string name="shop_category_style">스타일</string>
    <string name="shop_category_general">일반</string>
    <string name="shop_category_special">스페셜</string>
    <string name="shop_category_premium">프리미엄</string>
    <string name="shop_body_today_text">오늘의 추천</string>
    <string name="shop_body_today_hint">하루에 한번, 셔플하여 추천</string>
    <string name="shop_body_today_more">더 보기</string>
    <string name="shop_no_result">검색어를 다시 확인해보시길 바랍니다. 띄어쓰기나 철자가 잘못되었을 경우 검색 결과가 부정확할 수 있습니다. 만약 정확하게 입력했음에도 결과가 나오지 않았다면 개발자의 페이스북 페이지를 통해 문의하시길 바랍니다.</string>

    <!--
    <string name="main_search_hint">예: 심플테마, 핑크, 우주</string>
    <string name="main_request_btn01">사용 방법을 알려주세요.</string>
    <string name="main_request_btn01_url">https://m.blog.naver.com/beaqon/221186212804</string>
    <string name="main_request_btn02">마음에 드는 테마가 없어요.</string>
    <string name="main_request_btn03">이벤트와 공지를 확인할래요.</string>
    <string name="main_request_btn04">앱을 평가하고 싶어요.</string>
    <string name="main_request_btn04_url">https://play.google.com/store/apps/details?id=com.bqlab.themelab</string>
    <string name="main_request_btn05">앱의 설정으로 이동하고 싶어요.</string>
    <string name="main_request_btn06">개발자의 홈페이지에 가고 싶어요.</string>
    <string name="main_request_btn07">큰 문제가 발생했어요.</string>
    <string name="main_request_btn07_url">https://goo.gl/forms/Suo33CKSh9UMP0912</string>
    <string name="main_bottom_text">테마를 보고 싶으면 여기를 위로 드래그</string>
    <string name="main_tutorial_text">환영합니다.\n이 앱은 서비스를 위해 임시로 만들었으며\n기본적인 기능만 구현해두었습니다.\n테마는 위를 향해 드래그하면 나타납니다.\n정식으로 서비스를 제공하기 전까지는\n불편하시더라도 양해 부탁드립니다.\n(계속하시려면 화면을 터치)</string>
    -->

    <string name="tutorial_actionbar_title">사용 방법</string>
    <string name="tutorial_url">https://m.blog.naver.com/beaqon/221186212804</string>

    <string name="contact_actionbar_title">문의하기</string>
    <string name="contact_text_title">개발자에게 문의하세요.</string>
    <string name="contact_text_body">버그가 발생했거나 개발자에게 바라는 점이 있다면 페이스북 페이지로 이동하여 문의하는 것이 가능합니다. 최하단에 위치한 링크로 이동하여 메시지를 보내주세요. 피드백, 테마 요청, 개선할 점 건의 등이 해당됩니다.\n\n원하는 테마가 없을 경우 제작을 무료로 요청할 수 있습니다. 요청받은 테마는 약간의 검토를 지나야 제작이 시작되는데, 필연적으로 저작권을 위반해야 한다면 거부됩니다. 저작권자의 허락이 있었는 지도 말해주세요.\n\n모든 서비스는 무료이며, 개발자의 취미로 운영됩니다.</string>
    <string name="contact_btn_ig_url">https://www.instagram.com/bqlabdotcom</string>
    <string name="contact_btn_nb_url">https://beaqon.blog.me</string>

    <string name="event_actionbar_title">공지사항</string>

    <string name="setting_actionbar_title">설정</string>
    <string name="setting_push">푸시 알림</string>
    <string name="setting_push_news">새 테마 및 업데이트 소식</string>
    <string name="setting_info">정보</string>
    <string name="setting_info_copyright">저작권</string>
    <string name="setting_info_copyright_content">이 어플리케이션에서 창작터 테마에 해당하지 않은 모든 테마의 저작권은 BQ Lab에게 있으며, 비영리 목적으로 얼마든지 파일을 공유하는 것이 가능합니다.\n\n스타일 테마의 경우 모티브로한 대상에게서 색을 추출하여 재구성하고, 리소스 파일을 개발자가 스스로 제작하였으며, 해당되는 모든 테마를 항상 비영리적으로 제공합니다.\n\n모든 서비스는 광고료로 유지됩니다.</string>
    <string name="setting_info_homepage">BQ Lab 홈페이지</string>
    <string name="setting_lab">실험실</string>

    <string name="report_actionbar_title">버그 리포트 제출</string>
    <string name="report_url">https://goo.gl/forms/Suo33CKSh9UMP0912</string>

    <string name="select_top_text">돌아가고 싶으면 여기를 아래로 드래그 (또는 뒤로가기)</string>
    <string name="select_top_btn01">스타일</string>
    <string name="select_top_btn02">일반</string>
    <string name="select_top_btn03">커스텀</string>
    <string name="select_top_btn04">창작터</string>
    <string name="select_top_btn05">스페셜</string>
    <string name="select_top_btn06">프리미엄</string>
    <string name="select_bottom_button">개발자의 페이스북에 문의하기</string>

    <string name="theme_download">다운로드</string>
    <string name="theme_download_noto">이 테마는 수동으로 적용해야 합니다. 자세히 알아보기 버튼을 눌러 개발자의 블로그로 이동하면 어떻게 적용해야 하는지를 알려줍니다.</string>
    <string name="theme_download_noto_detail">자세히 알아보기</string>
    <string name="theme_download_noto_url">http://beaqon.blog.me/221265175222 </string>
    <string name="theme_preview">미리보기</string>

    <string name="start_download">다운로드</string>
    <string name="start_download_url">https://play.google.com/store/apps/details?id=com.google.android.apps.docs</string>
    <string name="start_text">구글드라이브가 설치되어 있지 않습니다. 이 어플리케이션은 평범한 대학생이 취미 및 공부 목적으로 개발했으며, 부족한 서버의 용량을 구글이 제공하는 무료 클라우드 서비스로 대체하고 있습니다. 수익이 발생할 경우 다른 방안을 모색할 가능성이 있으나, 그 전까지 양해를 바랍니다. 아래의 다운로드 버튼을 눌러 구글드라이브를 설치해주세요.</string>

    <string name="notice_n0001_title">[공지] 이 앱을 왜 만들었나요?</string>
    <string name="notice_n0001_content">이 앱을 만든 이유는 카카오톡 테마를 수동으로 설치하는 것이 너무 어렵다는 의견을 많이 봐왔기 때문입니다. 이전에 플레이스토어에 업로드했던 세 개의 테마가 모두 합쳐서 20만명 이상의 다운로드를 기록했는데, 이용자들의 리뷰를 읽어보니 대부분 테마를 적용하는 방법이 어렵다는 내용이었습니다. 그래서 자동으로 적용할 수 있도록 앱을 만든겁니다.\n\n그리고 두번째 이유는 관리하기가 쉬워서 그렇습니다. 제 앱으로 테마를 관리하면 제가 필요한 기능을 때마다 추가해서 사용하면 되고, 사용자들이 불편하다는 문의를 하면 이 앱에 기능을 추가해서 문제를 해결할 수 있습니다. 따로 플레이스토어에 업로드하면 모든 테마 설치기를 손봐야 하는 비효율성이 발생합니다. \n\n마지막으로는 테마 관련된 앱은 하나로 통합하고 싶어서 그랬습니다. 제 개발자 계정에 여러 앱을 올리게 될 텐데 테마를 많이 올려버리면 제가 만든 다른 앱들이 테마들에 의해 주목받기 어려울 수 있기 때문입니다. \n\n 카카오톡 테마는 앞으로 플레이스토어에 업데이트 및 업로드를 하지 않을 계획이며 앞으로 이 앱을 이용해주시면 감사하겠습니다. 앱이 불편하거나 개선사항, 또는 버그가 발생한 경우 페이스북 BQ Lab &amp; Play에 메시지를 보내주시면 빠른 시일 내에 반영하여 처리하도록 하겠습니다.</string>
    <string name="notice_n0002_title">[공지] 문의는 어디로 하면 되나요?</string>
    <string name="notice_n0002_content">개발자의 이메일 beaqon@naver.com이나 블로그 beaqon.blog.me, 그리고 페이스북 페이지 BQ Lab &amp; Play에 메시지를 남겨주시면 됩니다. 카톡테마 문의, 카톡테마를 어떻게 수정했으면 좋겠다는 내용 등 다양한 의견을 받고 있습니다. 버그가 발생한 경우에도 마찬가지로 앞서 말한 방법으로 문의를 하시면 됩니다. </string>
    <string name="notice_n0003_title">[공지] 왜 베타라는 문구가 있나요?</string>
    <string name="notice_n0003_content">앱의 인터페이스 배치가 완전하지 않은 이유는 아직 베타버전이라 그렇습니다. 기능과 앱 디자인 모두 앞으로 개선해나갈 예정입니다. 의견이 있다면 피드백을 보내주시길 바랍니다. 제게 문의하는 것과 관련한 모든 행위는 개발에 큰 도움이 됩니다.</string>
    <string name="notice_n0004_title">[공지] 새 테마 소식을 어떻게 들을 수 있나요?</string>
    <string name="notice_n0004_content">새 테마를 앱에 업로드한 후 개발자가 사용자의 스마트폰에 알림을 전송합니다. 이 알림은 설정에서 끄는 것이 가능합니다. 그리고 개발자의 블로그 beaqon.blog.me에서도 확인하실 수 있습니다. 페이스북 페이지 BQ Lab &amp; Play 에서 소식을 늘 업데이트 하니 팔로우해주시면 감사하겠습니다.</string>
    <string name="notice_n0005_title">[공지] 구글드라이브가 왜 필요한가요?</string>
    <string name="notice_n0005_content">구글드라이브 클라우드에 테마파일이 저장되어 있으며, 사용자는 앱을 통해 다운로드하는 식으로 앱이 제작되어 있기 때문입니다. 구글 계정이 있으면 구글드라이브를 이용하실 수 있으며 다운로드할 때 구글 계정을 묻는 팝업창이 뜬다면, 어떤 구글 계정으로 파일을 다운로드하실 지를 묻는 겁니다. 누가 테마파일을 다운로드 했는 지에 대한 기록은 남지 않으며 개발자인 저 역시 확인할 방법이 없습니다. 앞으로 수익이 발생한다면 구글드라이브는 사용하지 않으려고 합니다. 그러나 아직 수익 모델 계획이 없습니다.</string>
    <string name="notice_n0006_title">[공지] 테마를 다운로드할 때 구글 계정을 왜 묻나요?</string>
    <string name="notice_n0006_content">구글드라이브는 구글 계정이 있어야 사용할 수 있기 때문입니다. 로그인할 때 입력되는 정보는 제 능력 밖의 일이므로 확인할 방법이 없습니다.</string>
    <string name="notice_n0007_title">[공지] 테마의 저작권은 누구에게 있나요?</string>
    <string name="notice_n0007_content">테마와 앱에 대한 모든 권리는 개발자에게 있으며, 개발자 개인 계정은 인스타그램 bqlabdotcom, 페이스북 페이지 BQ Lab &amp; Play 네이버 아이디 beaqon, 플레이스토어 개발자명 BQ Lab 입니다. 테마의 모티브가된 대상과 이 앱이 제공하는 모든 스타일테마는 아무런 제휴 관계가 없으며 비공식이자 패러디 같은 콘텐츠라고 봐주시면 감사하겠습니다. 테마에 사용된 모든 리소스 파일은 개발자가 포토샵과 파워포인트로 창작한 것이며 모티브가 된 대상과 조금 유사할지라도 개발자 고유의 창작물입니다.</string>
    <string name="notice_n0008_title">[공지] 테마는 어떻게 삭제하나요?</string>
    <string name="notice_n0008_content">기기에 설치된 테마 앱을 삭제하거나 카카오톡 앱의 테마 설정 화면에서 삭제할 수 있습니다. 이 앱을 삭제하는 것과 테마의 삭제는 무관합니다. 따라서 이 앱을 삭제하더라도 테마는 기기에 그대로 남아 있습니다.</string>

    <string name="download_guide_text">사용자의 기기를 확인하고 있습니다.</string>
</resources>
