<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.bqlab.themelab.activity.SettingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:paddingTop="20dp">

        <LinearLayout
            android:id="@+id/setting_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/app_no_data"
                android:textColor="@color/colorGrayDark"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/setting_push"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/setting_push"
                android:textColor="@color/colorBlack"
                android:textSize="12sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/colorWhiteDark"
                android:paddingStart="10dp"
                tools:ignore="RtlSymmetry"
                android:paddingLeft="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:text="@string/setting_push_news"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp" />

                <Switch
                    android:id="@+id/setting_push_item01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:checked="false"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/setting_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/setting_info"
                android:textColor="@color/colorGrayDark"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/setting_info_item01"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/colorWhiteDark"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:text="@string/setting_info_copyright"
                android:textColor="@color/colorBlack"
                android:textSize="14sp"
                tools:ignore="RtlSymmetry"
                android:paddingLeft="10dp" />

            <TextView
                android:id="@+id/setting_info_item02"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/colorWhiteDark"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:text="@string/setting_info_homepage"
                android:textColor="@color/colorBlack"
                android:textSize="14sp"
                tools:ignore="RtlSymmetry"
                android:paddingLeft="10dp" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>
