<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.bqlab.themelab.activity.SelectActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/select_top_text"
        android:textColor="@color/colorWhiteDarkest"
        android:textSize="12sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/select_top"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/select_top_board"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/select_top_board_button"
                        android:layout_width="290dp"
                        android:layout_height="100dp"
                        android:background="@drawable/select_top_board" />

                    <ImageView
                        android:layout_width="290dp"
                        android:layout_height="3dp"
                        android:background="@color/colorWhiteDarker" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/select_top_btn01"
                            style="@style/Widget.AppCompat.Button.Borderless"
                            android:layout_width="90dp"
                            android:layout_height="45dp"
                            android:background="@color/colorWhite"
                            android:gravity="center"
                            android:text="@string/select_top_btn01"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="90dp"
                            android:layout_height="3dp"
                            android:background="@color/colorWhiteDarker"
                            tools:ignore="ContentDescription" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/select_top_btn02"
                            android:layout_width="90dp"
                            android:layout_height="45dp"
                            style="@style/Widget.AppCompat.Button.Borderless"
                            android:background="@color/colorWhite"
                            android:gravity="center"
                            android:text="@string/select_top_btn02"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="90dp"
                            android:layout_height="3dp"
                            android:background="@color/colorWhiteDarker"
                            tools:ignore="ContentDescription" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/select_top_btn03"
                            android:layout_width="90dp"
                            android:layout_height="45dp"
                            android:background="@color/colorWhite"
                            android:gravity="center"
                            style="@style/Widget.AppCompat.Button.Borderless"
                            android:text="@string/select_top_btn03"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="90dp"
                            android:layout_height="3dp"
                            android:background="@color/colorWhiteDarker"
                            tools:ignore="ContentDescription" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/select_top_btn04"
                            android:layout_width="90dp"
                            android:layout_height="45dp"
                            android:background="@color/colorWhite"
                            style="@style/Widget.AppCompat.Button.Borderless"
                            android:gravity="center"
                            android:text="@string/select_top_btn04"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="90dp"
                            android:layout_height="3dp"
                            android:background="@color/colorWhiteDarker"
                            tools:ignore="ContentDescription" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/select_top_btn05"
                            android:layout_width="90dp"
                            android:layout_height="45dp"
                            android:background="@color/colorWhite"
                            android:gravity="center"
                            style="@style/Widget.AppCompat.Button.Borderless"
                            android:text="@string/select_top_btn05"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="90dp"
                            android:layout_height="3dp"
                            android:background="@color/colorWhiteDarker"
                            tools:ignore="ContentDescription" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/select_top_btn06"
                            android:layout_width="90dp"
                            android:layout_height="45dp"
                            android:background="@color/colorWhite"
                            android:gravity="center"
                            style="@style/Widget.AppCompat.Button.Borderless"
                            android:text="@string/select_top_btn06"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="90dp"
                            android:layout_height="3dp"
                            android:background="@color/colorWhiteDarker"
                            tools:ignore="ContentDescription" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="NestedScrolling">

                <LinearLayout
                    android:id="@+id/select_body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"/>
            </ScrollView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
